--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
     padding-left: 50px;
 }
 .tenis{
-    background-image: linear-gradient(#d115b3, #3222ef);
+    background-image: linear-gradient(#15d11e, #05ab08);
     color: #FFFFFF;
     display: flex;
     justify-content: center;
