--- a/style.css
+++ b/style.css
@@ -56,8 +56,8 @@ body{
 }
 .atletas{
     padding: 24px 0;
-    background-color: #dc84fe;
-    color: #8811ff;
+    background-color: #87e416;
+    color: #679b07;
 }
 .atleta-div{
     text-align: center;
