--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
       
 }
 .cabecalho{
-    background-color: #754906;
+    background-color: #db5613;
     color: #FFFFFF;
     display: flex;
     justify-content: space-around;
@@ -56,8 +56,8 @@ body{
 }
 .atletas{
     padding: 24px 0;
-    background-color: #87e416;
-    color: #679b07;
+    background-color: #1bb551;
+    color: #000000;
 }
 .atleta-div{
     text-align: center;
