--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
       
 }
 .cabecalho{
-    background-color: #db5613;
+    background-color: #00ff0dce;
     color: #FFFFFF;
     display: flex;
     justify-content: space-around;
