--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body{
       
 }
 .cabecalho{
-    background-color: #00ff0dce;
-    color: #FFFFFF;
+    background-color: #ffffffce;
+    color: #000000;
     display: flex;
     justify-content: space-around;
     padding: 16px 0;
