--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body{
     padding: 24px 0;
 }
 .atletas-todos{
-    display: block;
+    display: contents;
     grid-template-columns: 25% 25% 25%;
 }
 .rodape{
