--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body{
 .atletas-todos{
     display: grid;
     grid-template-columns: 25% 25% 25%;
-    text-align: center;
+    align-items: center;
 }
 .rodape{
     background-color: #000000;
