--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body{
     color: #000000;
 }
 .atleta-div{
-    text-align: center;
+    text-align: end;
     padding: 24px 0;
 }
 .atleta-titulo{
@@ -69,7 +69,7 @@ body{
 .atletas-todos{
     display: grid;
     grid-template-columns: 25% 25% 25%;
-    align-items: center;
+    align-items: end;
 }
 .rodape{
     background-color: #000000;
